crates/monochange/tests/snapshots/changelog_formats__release_group_alert_snapshots_match_expected_output@alert_multiline.snap
---
source: crates/monochange/tests/changelog_formats.rs
expression: group_changelog
---
# Changelog

All notable changes to this project will be documented in this file.

This changelog is managed by [monochange](https://github.com/monochange/monochange).

## 1.1.0 ([DATE])

Grouped release for `sdk`.

### Features

- 🟠 **core**: **explain grouped changelog formatting.** This release note needs more than one line.
